feat() add alterar nota e algumas correções